# vision-desktop-bot

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/: api.py  bot.py  dialogs.py  main.py  test.py  utils.py
