
[project]
name = "vision-desktop-bot"
version = "0.1.0"
description = "Vision-based desktop automation bot for Notepad"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "botcity-framework-core>=1.3.0",
    "botcity-maestro-sdk>=0.9.0",
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.2",
    "PyGetWindow>=0.0.9",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "pywin32>=311",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
